# environmental-change-insights

./: .gitignore  README.md  convert_to_pmtiles.py  index.html  pyproject.toml
app/: app.js  index.html  styles.css
config/: target.json
configs/: output_catalog.json
landing/: insights.js  styles.css
outputs/bengaluru/: boundary.geojson  overlay.meta.json  report.md  summary.json  ward_overlay.meta.json  ward_overlay.pmtiles
outputs/chengalputtu/: app.js  historical_imagery.json  index.html  overlay.meta.json  summary.json  ward_overlay.meta.json  ward_overlay.pmtiles
outputs/chennai/: app.js  boundary.geojson  overlay.meta.json  overlay.pmtiles  report.md  summary.json  ward_overlay.geojson  ward_overlay.meta.json  ward_overlay.pmtiles
outputs/gautam_buddha_nagar/: app.js  historical_imagery.json  overlay.meta.json  summary.json
outputs/gurgaon/: historical_imagery.json  index.html  overlay.meta.json  styles.css  summary.json  ward_overlay.geojson  ward_overlay.meta.json  ward_overlay.pmtiles
outputs/jaipur/: app.js  overlay.meta.json
outputs/kanpur_nagar/: app.js
outputs/kolkata/: boundary.geojson  index.html  overlay.geojson  overlay.meta.json  overlay.pmtiles  report.md  summary.json
outputs/mahe-1y/: overlay.meta.json  overlay.pmtiles
outputs/pune/: app.js  boundary.geojson  report.md  summary.json  ward_overlay.geojson
outputs/shahdara-1y/: overlay.meta.json  overlay.pmtiles  ward_overlay.meta.json  ward_overlay.pmtiles
outputs/surat/: app.js  report.md  (+3 more)
scripts/: colab_generate_data.py  generate_change_data.py  run_india_news_scan.py
(+4 files in other folders)
